--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order_edit_item.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order_edit_item.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/iv_order_edit_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_margin="10dp"
         android:src="@drawable/ic_logo"/>
 
