--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_address.xml
@@ -13,10 +13,11 @@
         android:layout_height="80dp">
         <Button
             android:id="@+id/bt_add_address_list"
-            android:layout_width="140dp"
+            android:layout_width="320dp"
             android:layout_height="40dp"
             android:layout_centerInParent="true"
-            android:background="#0e932e"
+            android:textSize="16sp"
+            android:background="@drawable/button_shape_color"
             android:text="新增收货地址"
             android:textColor="#ffffff"
             android:layout_marginBottom="20dp"/>
@@ -27,10 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/address_include"
         android:layout_above="@id/rl_add_address"
-        android:dividerHeight="5dp"
-        android:cacheColorHint="#00000000"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:dividerHeight="2dp"
+        android:cacheColorHint="#00000000"/>
 
 </RelativeLayout>
