--- a/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
 
     <color name="dis_add_bt">#0e932e</color>
 
+    <color name="nearbyTabLine">#87c38f</color>
 
     <color name="colorPrimaryPersonal">#0e932e</color>
     <color name="colorPrimaryDarkPersonal">#0e932e</color>
