--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order_details_item.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_personal_info_order_details_item.xml
@@ -4,33 +4,32 @@
                 android:layout_height="wrap_content">
 <RelativeLayout
     android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp">
+    android:layout_height="70dp">
     <ImageView
         android:id="@+id/iv_order_details_info"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/ic_logo"
-        android:layout_margin="5dp"/>
+        android:layout_margin="10dp"/>
     <TextView
         android:id="@+id/tv_order_details_product_name"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:textSize="14sp"
-        android:text="三叶草三叶草"
+        android:text="三叶草三叶三叶草三叶草三叶草三叶草三叶草三叶草三叶草"
         android:layout_toRightOf="@id/iv_order_details_info"
         android:layout_marginTop="10dp"
-        android:gravity="center"/>
+        android:layout_marginBottom="2dp"/>
     <TextView
         android:id="@+id/tv_order_details_product_price"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="15dp"
         android:layout_alignParentRight="true"
         android:text="321.00"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:layout_marginLeft="3dp"
         android:textSize="12sp"/>
     <ImageView
         android:layout_width="16dp"
@@ -44,25 +43,19 @@
         android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:text="2"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="15dp"
         android:layout_marginTop="40dp"
-        android:layout_marginLeft="3dp"
         android:gravity="center"/>
     <ImageView
         android:id="@+id/iv_order_details_product_mul"
-        android:layout_width="16dp"
-        android:layout_height="18dp"
+        android:layout_width="15dp"
+        android:layout_height="17dp"
         android:layout_marginLeft="3dp"
-        android:src="@drawable/ic_cha_shop"
-        android:layout_marginTop="46dp"
+        android:src="@drawable/ic_product_mul_b"
+        android:layout_marginTop="47dp"
         android:layout_toLeftOf="@id/tv_order_details_product_number"/>
-    <TextView
-        android:id="@+id/tv_order_defaults_details_product"
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginTop="40dp"
-        android:layout_toLeftOf="@id/iv_order_details_product_mul"
-        android:text="300g"
-        android:gravity="center"/>
+
 
     <View
         style="@style/view_small"/>
