--- a/QianJiaJia-kitchen/app/src/main/res/layout/activity_shoppingcart_product_details.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/activity_shoppingcart_product_details.xml
@@ -1,13 +1,274 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ScrollView
+        android:layout_above="@+id/rl_product_details_shop"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="xscsdll"
-        android:textSize="16sp"
-        android:layout_centerInParent="true"/>
+        android:scrollbars="none">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:id="@+id/rl_product_details"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <include
+                    layout="@layout/activity_top_bar_product_details"/>
+
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="260dp"
+                    android:layout_centerInParent="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="20dp"
+                    android:src="@drawable/ic_shoppingcart_product"/>
+            </RelativeLayout>
+
+            <View
+                android:id="@+id/view1_product_details"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/rl_product_details"
+                android:background="#0e932e"/>
+
+            <RelativeLayout
+                android:id="@+id/rl_product_details_show"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_below="@+id/view1_product_details">
+
+                <TextView
+                    android:id="@+id/tv_product_name_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="28dp"
+                    android:layout_marginTop="10dp"
+                    android:text="麒麟瓜麒麟瓜"
+                    android:textSize="18sp"/>
+
+                <TextView
+                    android:id="@+id/tv_product_small_class_name_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_below="@id/tv_product_name_details"
+                    android:text="时令水果"
+                    android:textSize="14sp"/>
+                <ImageView
+                    android:id="@+id/iv_product_one_price_details"
+                    android:layout_below="@id/tv_product_small_class_name_details"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginBottom="2dp"
+                    android:src="@drawable/ic_product_one_price"/>
+                <TextView
+                    android:id="@+id/tv_product_one_price_details"
+                    android:layout_below="@id/tv_product_small_class_name_details"
+                    android:layout_toRightOf="@+id/iv_product_one_price_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="#0e932e"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="5dp"
+                    android:text="22.90"
+                    android:layout_marginBottom="2dp"/>
+
+                <ImageView
+                    android:id="@+id/iv_plus_product_details"
+                    android:layout_width="22dp"
+                    android:layout_height="32dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="24dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_shopping_plus"/>
+                <TextView
+                    android:id="@+id/tv_number_product_details"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_toLeftOf="@id/iv_plus_product_details"
+                    android:gravity="center"
+                    android:text="1"
+                    android:textSize="16sp"/>
+                <ImageView
+                    android:id="@+id/iv_minus_product_details"
+                    android:layout_width="24dp"
+                    android:layout_height="32dp"
+                    android:layout_toLeftOf="@id/tv_number_product_details"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="3dp"
+                    android:src="@drawable/ic_shopping_minus"/>
+
+            </RelativeLayout>
+            <View
+                android:id="@+id/view2_product_details"
+                android:layout_below="@id/rl_product_details_show"
+                style="@style/view_big"/>
+            <RelativeLayout
+                android:id="@+id/rl_product_details_show_context"
+                android:layout_below="@+id/view2_product_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@drawable/product_describe_shape">
+                <TextView
+                    android:id="@+id/tv_pinming_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="品名:"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:id="@+id/tv_pinming_context_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/tv_pinming_product_details"
+                    android:text="麒麟瓜麒麟瓜麒麟瓜"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16sp"/>
+                <TextView
+                    android:layout_below="@id/tv_pinming_product_details"
+                    android:id="@+id/tv_chandi_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="产地:"
+                    android:layout_marginTop="2dp"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:layout_below="@id/tv_pinming_product_details"
+                    android:id="@+id/tv_chandi_context_product_details"
+                    android:layout_toRightOf="@id/tv_chandi_product_details"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:text="中国"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16sp"/>
+                <TextView
+                    android:layout_below="@id/tv_pinming_product_details"
+                    android:id="@+id/tv_shangjiariqi_product_details"
+                    android:layout_toRightOf="@id/tv_chandi_context_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="上架日期:"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="34dp"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:layout_below="@id/tv_pinming_product_details"
+                    android:id="@+id/tv_shangjiariqi_context_product_details"
+                    android:layout_toRightOf="@id/tv_shangjiariqi_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="2017-03-28"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16sp"/>
+                <TextView
+                    android:layout_below="@id/tv_chandi_product_details"
+                    android:id="@+id/tv_guige_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="规格:"
+                    android:layout_marginTop="2dp"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:layout_below="@id/tv_chandi_product_details"
+                    android:id="@+id/tv_guige_context_product_details"
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/tv_guige_product_details"
+                    android:text="1.5kg"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16sp"/>
+                <TextView
+                    android:layout_below="@id/tv_chandi_product_details"
+                    android:id="@+id/tv_shengchanriqi_product_details"
+                    android:layout_toRightOf="@id/tv_guige_context_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="生产日期:"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginLeft="34dp"
+                    android:textSize="18sp"/>
+                <TextView
+                    android:layout_below="@id/tv_chandi_product_details"
+                    android:id="@+id/tv_shengchanriqi_context_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/tv_shengchanriqi_product_details"
+                    android:text="2017-03-21"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="16sp"/>
+            </RelativeLayout>
+            <View
+                android:id="@+id/view3_product_details"
+                android:layout_below="@id/rl_product_details_show_context"
+                style="@style/view_big"/>
+            <RelativeLayout
+                android:layout_below="@id/view3_product_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="100dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
+                android:background="@drawable/product_describe_shape">
+
+                <TextView
+                    android:id="@+id/tv_miaoshu_product_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp"
+                    android:text="商品描述:"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/tv_miaoshu_product_details"
+                    android:id="@+id/tv_miaoshu_context_product_details"
+                    android:textSize="14sp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginTop="3dp"
+                    android:text="麒麟瓜是西瓜的一种。麒麟瓜是一个经过培植的科研新品种，对生长环境和土壤以及日照的要求是非常高的，但是由于从种下到开花、从开花到收瓜只需60天左右，因此即使种植讲究但因周期短、口感好、效益见得快，因此温州和海南的农民还是很乐意种植的。
+“小麒麟”西瓜原名“XQL02”，属早熟花皮黄瓤西瓜品种， 由南京利华蔬菜研究所以WR06-11×WR11-16 配组，江苏中江种业股份有限公司申请审定（苏审瓜200601）。"/>
+            </RelativeLayout>
+
+        </RelativeLayout>
+    </ScrollView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:id="@+id/rl_product_details_shop"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true">
+        <View
+            style="@style/view_small"/>
+        <Button
+            android:layout_width="280dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:textColor="#ffffff"
+            android:textSize="16sp"
+            android:text="加入购物车"
+            android:gravity="center_horizontal"
+            android:background="@drawable/button_add_shop"
+            android:layout_alignParentRight="true"/>
+        <ImageView
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="5dp"
+            android:layout_alignParentLeft="true"
+            android:src="@drawable/ic_product_add_shop"/>
+    </RelativeLayout>
 
 </RelativeLayout>
