--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_personal.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_personal.xml
@@ -199,9 +199,11 @@
         android:layout_below="@id/rl_personal_info_headImg"/>
 
     <ScrollView
+        android:layout_below="@id/view_info_two"
+        android:id="@+id/scrollView_my1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/view_info_two">
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -346,5 +348,6 @@
             <View
                 style="@style/view_big"/>
         </LinearLayout>
-    </ScrollView>
+   </ScrollView>
+
 </RelativeLayout>
