--- a/QianJiaJia-kitchen/app/src/main/res/drawable/main_tab_bottom_home_selector.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/drawable/main_tab_bottom_home_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/ic_tab_task_selected" android:state_pressed="true"/>
-    <item android:drawable="@drawable/ic_tab_task_selected" android:state_checked="true"/>
-    <item android:drawable="@drawable/ic_tab_task" />
+    <item android:drawable="@drawable/ic_tab_home_selected" android:state_pressed="true"/>
+    <item android:drawable="@drawable/ic_tab_home_selected" android:state_checked="true"/>
+    <item android:drawable="@drawable/ic_tab_home" />
 </selector>
