--- a/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_shop_not_null_item.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/fragment_tab_shop_not_null_item.xml
@@ -7,7 +7,8 @@
         android:id="@+id/ll_shopping_item"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:background="#ffffff">
 
         <RelativeLayout
             android:layout_width="80dp"
@@ -34,6 +35,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
                 android:text="麒麟瓜00000000"
+                android:textColor="#444444"
                 android:textSize="16sp"/>
 
             <RelativeLayout
@@ -41,31 +43,34 @@
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
                 android:layout_below="@id/tv_product_name_shop"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="2dp">
 
                 <ImageView
                     android:id="@+id/iv_minus_shop"
-                    android:layout_width="20dp"
-                    android:layout_height="30dp"
+                    android:layout_width="23dp"
+                    android:layout_height="32dp"
                     android:layout_alignParentBottom="true"
                     android:layout_margin="5dp"
                     android:src="@drawable/ic_shopping_minus"/>
 
                 <TextView
                     android:id="@+id/tv_number_shop"
-                    android:layout_width="30dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="22dp"
+                    android:layout_marginRight="2dp"
+                    android:layout_marginLeft="2dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_toRightOf="@id/iv_minus_shop"
                     android:gravity="center"
                     android:text="1"
+                    android:textColor="#444444"
                     android:textSize="16sp"/>
 
                 <ImageView
                     android:id="@+id/iv_plus_shop"
-                    android:layout_width="20dp"
-                    android:layout_height="30dp"
+                    android:layout_width="22dp"
+                    android:layout_height="32dp"
                     android:layout_alignParentBottom="true"
                     android:layout_margin="5dp"
                     android:layout_toRightOf="@id/tv_number_shop"
@@ -102,6 +107,7 @@
                     android:gravity="center"
                     android:singleLine="true"
                     android:text="10600"
+                    android:textColor="#444444"
                     android:textSize="14sp"/>
             </RelativeLayout>
 
@@ -113,7 +119,7 @@
                     android:id="@+id/iv_delete_shop"
                     android:layout_width="16dp"
                     android:layout_height="18dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:layout_marginLeft="70dp"
                     android:src="@drawable/ic_cha_shop"/>
             </RelativeLayout>
