--- a/QianJiaJia-kitchen/app/src/main/res/layout/listitem_home_product_list.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/layout/listitem_home_product_list.xml
@@ -22,8 +22,8 @@
 
         <ImageView
             android:id="@+id/pro_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:src="@drawable/ic_up"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
