--- a/QianJiaJia-kitchen/app/src/main/res/values/styles.xml
+++ b/QianJiaJia-kitchen/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     </style>
 
     <style name="PersonalInfoMoreStyle">
-        <item name="android:background">@drawable/dis_add_bt</item>
+        <item name="android:background">#00000000</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginRight">10dp</item>
@@ -36,18 +36,23 @@
     </style>
 
     <style name="tv_info_xx">
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_marginBottom">5dp</item>
         <item name="android:layout_marginLeft">15dp</item>
         <item name="android:layout_marginRight">15dp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:textSize">16sp</item>
-        <item name="android:layout_centerVertical">true</item>
+        <item name="android:gravity">center_vertical</item>
     </style>
 
     <style name="view_big">
         <item name="android:layout_height">10dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:background">#e6e6e6</item>
+    </style>
+    <style name="view_middle">
+        <item name="android:layout_height">5dp</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:background">#e6e6e6</item>
     </style>
@@ -77,5 +82,10 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-
+    <style name="Dialog" parent="android:style/Theme.Dialog">
+        <item name="android:background">#00000000</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
 </resources>
